[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/guns/GunSingle/417Single.png" type="Texture" id=1]
[ext_resource path="res://assets/guns/GunSingle/Six12Single.png" type="Texture" id=2]
[ext_resource path="res://assets/guns/GunSingle/AWPSingle.png" type="Texture" id=3]
[ext_resource path="res://assets/guns/GunSingle/P90Single.png" type="Texture" id=4]
[ext_resource path="res://assets/guns/GunSingle/DesertEagleSingle.png" type="Texture" id=5]
[ext_resource path="res://assets/guns/GunSingle/FAMASSingle.png" type="Texture" id=6]
[ext_resource path="res://assets/src/prefabs/GunHotbar.gd" type="Script" id=7]

[node name="GunHotbar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel0" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.533
anchor_right = 1.0
anchor_bottom = 0.533
margin_left = -104.0
margin_top = -287.8
margin_right = -24.0
margin_bottom = -222.8
rect_pivot_offset = Vector2( 33, 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel1" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -173.0
margin_right = -24.0
margin_bottom = -108.0
rect_pivot_offset = Vector2( 33, 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -83.0
margin_right = -24.0
margin_bottom = -18.0
rect_pivot_offset = Vector2( 33, 31 )

[node name="Panel3" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 7.0
margin_right = -24.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 33, 31 )

[node name="Panel4" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 97.0
margin_right = -24.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 33, 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="."]
self_modulate = Color( 0.458824, 0.458824, 0.458824, 0.196078 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 187.0
margin_right = -24.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 33, 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image417" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.47
anchor_right = 1.0
anchor_bottom = 0.47
margin_left = -96.0
margin_top = -266.0
margin_right = -26.0
margin_bottom = -240.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 66, 26 )
patch_margin_right = 66
patch_margin_bottom = 26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageAWPS" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.47
anchor_right = 1.0
anchor_bottom = 0.47
margin_left = -104.0
margin_top = -155.0
margin_right = -26.0
margin_bottom = -123.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 73, 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageFAMAS" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -68.0
margin_right = -30.0
margin_bottom = -42.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 56, 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageP90" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.512
anchor_right = 1.0
anchor_bottom = 0.512
margin_left = -96.0
margin_top = 108.8
margin_right = -30.0
margin_bottom = 134.8
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 54, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageSix12" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 204.0
margin_right = -24.0
margin_bottom = 236.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 60, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageDesertEagle" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 12.0
margin_right = -26.0
margin_bottom = 60.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 43, 28 )
__meta__ = {
"_edit_use_anchors_": false
}
